modelclass along with apis implemented
