# apidoc.yml
@@ -10,6 +10,29 @@ servers:
     description: Staging server
 components:
   schemas:
+    CreateUserProfileRequest:
+      type: object
+      properties:
+        username:
+          type: string
+        displayName:
+          type: string
+        avatarUrl:
+          type: string
+        statusMessage:
+          type: string
+      required:
+        - username
+        - displayName
+    UpdateUserProfileRequest:
+        type: object
+        properties:
+          displayName:
+            type: string
+          avatarUrl:
+            type: string
+          statusMessage:
+            type: string
     UserProfile:
       type: object
       properties:
@@ -44,6 +67,7 @@ components:
       required:
         - code
         - message
+    
   responses:
     NotFound:
       description: Resource not found
@@ -94,19 +118,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                username:
-                  type: string
-                displayName:
-                  type: string
-                avatarUrl:
-                  type: string
-                statusMessage:
-                  type: string
-              required:
-                - username
-                - displayName
+              $ref: '#/components/schemas/CreateUserProfileRequest'
       responses:
         '201':
           description: Profile created successfully
@@ -159,14 +171,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                displayName:
-                  type: string
-                avatarUrl:
-                  type: string
-                statusMessage:
-                  type: string
+              $ref: '#/components/schemas/UpdateUserProfileRequest'
       responses:
         '200':
           description: Profile updated successfully
